// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should add a file import 3`] = `
[
  {
    "_id": "32174469_2471540929_fee",
    "_rev": "1-ba2b000ee276f6b46473a60c692e0b0a",
    "blockNumber": "11187695",
    "change": "-0.0003213",
    "changeN": -0.0003213,
    "contractAddress": "",
    "errorCode": "",
    "ethCurrentValue": "1182.96827233165",
    "ethHistoricalPrice": "402.66",
    "from": "0xf98c96b5d10faafc2324847c82305bd5fd7e5ad3",
    "integration": "etherscan",
    "method": "Transfer",
    "operation": "Fee",
    "status": "",
    "symbol": "ETH",
    "timestamp": 1604460202000,
    "to": "0x003dc32fe920a4aaeed12dc87e145f030aa753f3",
    "txHash": "0xa6cb206757f26bc188607946af4a6d49f81ace2cf328eb2c36290b0083cc4770",
    "txnFee": "0.0003213",
    "txnFeeUsd": "0.812042103307583",
    "valueIn": "0",
    "valueOut": "0.468064038",
    "wallet": "Spot",
  },
  {
    "_id": "32174469_2471540929",
    "_rev": "1-3be194c9391e6fc98103558661451198",
    "blockNumber": "11187695",
    "change": "-0.468064038",
    "changeN": -0.468064038,
    "contractAddress": "",
    "errorCode": "",
    "ethCurrentValue": "1182.96827233165",
    "ethHistoricalPrice": "402.66",
    "from": "0xf98c96b5d10faafc2324847c82305bd5fd7e5ad3",
    "integration": "etherscan",
    "method": "Transfer",
    "operation": "Withdraw",
    "status": "",
    "symbol": "ETH",
    "timestamp": 1604460202000,
    "to": "0x003dc32fe920a4aaeed12dc87e145f030aa753f3",
    "txHash": "0xa6cb206757f26bc188607946af4a6d49f81ace2cf328eb2c36290b0083cc4770",
    "txnFee": "0.0003213",
    "txnFeeUsd": "0.812042103307583",
    "valueIn": "0",
    "valueOut": "0.468064038",
    "wallet": "Spot",
  },
  {
    "_id": "32174469_4171546297_fee",
    "_rev": "1-9ef16d0bfd6fd26810955e9f54735cf5",
    "blockNumber": "5255185",
    "change": "-0.000134622",
    "changeN": -0.000134622,
    "contractAddress": "",
    "errorCode": "",
    "ethCurrentValue": "75.8209246785792",
    "ethHistoricalPrice": "613.15",
    "from": "0xf98c96b5d10faafc2324847c82305bd5fd7e5ad3",
    "integration": "etherscan",
    "method": "Transfer",
    "operation": "Fee",
    "status": "",
    "symbol": "ETH",
    "timestamp": 1521059209000,
    "to": "0xf652d990e50af27d8d423ac80631b4f5ef6d4113",
    "txHash": "0xca53366c006469162541313f3e714ca7b91f65ea8c5e69205f7aff27aa1dc1d3",
    "txnFee": "0.000134622",
    "txnFeeUsd": "0.340238817402656",
    "valueIn": "0",
    "valueOut": "0.03",
    "wallet": "Spot",
  },
  {
    "_id": "32174469_4171546297",
    "_rev": "1-3ccf3d97beb9c40e9e160b35cd361818",
    "blockNumber": "5255185",
    "change": "-0.03",
    "changeN": -0.03,
    "contractAddress": "",
    "errorCode": "",
    "ethCurrentValue": "75.8209246785792",
    "ethHistoricalPrice": "613.15",
    "from": "0xf98c96b5d10faafc2324847c82305bd5fd7e5ad3",
    "integration": "etherscan",
    "method": "Transfer",
    "operation": "Withdraw",
    "status": "",
    "symbol": "ETH",
    "timestamp": 1521059209000,
    "to": "0xf652d990e50af27d8d423ac80631b4f5ef6d4113",
    "txHash": "0xca53366c006469162541313f3e714ca7b91f65ea8c5e69205f7aff27aa1dc1d3",
    "txnFee": "0.000134622",
    "txnFeeUsd": "0.340238817402656",
    "valueIn": "0",
    "valueOut": "0.03",
    "wallet": "Spot",
  },
  {
    "_id": "32174469_3745186990_fee",
    "_rev": "1-390af566b11b9ae7db16dc585ba258d8",
    "blockNumber": "4675731",
    "change": "-0.00042",
    "changeN": -0.00042,
    "contractAddress": "",
    "errorCode": "",
    "ethCurrentValue": "2527.36415595264",
    "ethHistoricalPrice": "466.93",
    "from": "0xf98c96b5d10faafc2324847c82305bd5fd7e5ad3",
    "integration": "etherscan",
    "method": "Transfer",
    "operation": "Fee",
    "status": "",
    "symbol": "ETH",
    "timestamp": 1512422010000,
    "to": "0xae8d7e566ba7bdecd932015475c22cef3ae07768",
    "txHash": "0x56c244f19bcbe2b09b17ce4360c0f53f009202bc791b6d10726346336335b99b",
    "txnFee": "0.00042",
    "txnFeeUsd": "1.06149294550011",
    "valueIn": "0",
    "valueOut": "1",
    "wallet": "Spot",
  },
  {
    "_id": "32174469_3745186990",
    "_rev": "1-094d7ee1bbe0a50d6d82ca72e6a5ff58",
    "blockNumber": "4675731",
    "change": "-1",
    "changeN": -1,
    "contractAddress": "",
    "errorCode": "",
    "ethCurrentValue": "2527.36415595264",
    "ethHistoricalPrice": "466.93",
    "from": "0xf98c96b5d10faafc2324847c82305bd5fd7e5ad3",
    "integration": "etherscan",
    "method": "Transfer",
    "operation": "Withdraw",
    "status": "",
    "symbol": "ETH",
    "timestamp": 1512422010000,
    "to": "0xae8d7e566ba7bdecd932015475c22cef3ae07768",
    "txHash": "0x56c244f19bcbe2b09b17ce4360c0f53f009202bc791b6d10726346336335b99b",
    "txnFee": "0.00042",
    "txnFeeUsd": "1.06149294550011",
    "valueIn": "0",
    "valueOut": "1",
    "wallet": "Spot",
  },
  {
    "_id": "32174469_1010805629_fee",
    "_rev": "1-0a034a083ad0ec213fa13779ea0094ea",
    "blockNumber": "4344914",
    "change": "-0.000441",
    "changeN": -0.000441,
    "contractAddress": "",
    "errorCode": "",
    "ethCurrentValue": "1263.68207797632",
    "ethHistoricalPrice": "311.26",
    "from": "0xf98c96b5d10faafc2324847c82305bd5fd7e5ad3",
    "integration": "etherscan",
    "method": "Transfer",
    "operation": "Fee",
    "status": "",
    "symbol": "ETH",
    "timestamp": 1507394778000,
    "to": "0x003dc32fe920a4aaeed12dc87e145f030aa753f3",
    "txHash": "0xb41d6819932845278e7c451400f1778a952b35c6358dc51b49436438753f5113",
    "txnFee": "0.000441",
    "txnFeeUsd": "1.11456759277511",
    "valueIn": "0",
    "valueOut": "0.5",
    "wallet": "Spot",
  },
  {
    "_id": "32174469_1010805629",
    "_rev": "1-4921b10d7f18cadf4eba6ea6aa9c14f2",
    "blockNumber": "4344914",
    "change": "-0.5",
    "changeN": -0.5,
    "contractAddress": "",
    "errorCode": "",
    "ethCurrentValue": "1263.68207797632",
    "ethHistoricalPrice": "311.26",
    "from": "0xf98c96b5d10faafc2324847c82305bd5fd7e5ad3",
    "integration": "etherscan",
    "method": "Transfer",
    "operation": "Withdraw",
    "status": "",
    "symbol": "ETH",
    "timestamp": 1507394778000,
    "to": "0x003dc32fe920a4aaeed12dc87e145f030aa753f3",
    "txHash": "0xb41d6819932845278e7c451400f1778a952b35c6358dc51b49436438753f5113",
    "txnFee": "0.000441",
    "txnFeeUsd": "1.11456759277511",
    "valueIn": "0",
    "valueOut": "0.5",
    "wallet": "Spot",
  },
  {
    "_id": "32174469_3666988626_fee",
    "_rev": "1-91c20182f5914c468c2433e7b3786ad8",
    "blockNumber": "4255521",
    "change": "-0.00042102",
    "changeN": -0.00042102,
    "contractAddress": "",
    "errorCode": "",
    "ethCurrentValue": "7079.14700082334",
    "ethHistoricalPrice": "303.79",
    "from": "0xf98c96b5d10faafc2324847c82305bd5fd7e5ad3",
    "integration": "etherscan",
    "method": "Transfer",
    "operation": "Fee",
    "status": "",
    "symbol": "ETH",
    "timestamp": 1504978649000,
    "to": "0x1c6db129a338e9a39a559a856175605dada4bdcd",
    "txHash": "0x5681f720f737811e4822936f08b4a8644184bde3ea3efea74614bb44cb78c901",
    "txnFee": "0.00042102",
    "txnFeeUsd": "1.06407085693918",
    "valueIn": "0",
    "valueOut": "2.801",
    "wallet": "Spot",
  },
  {
    "_id": "32174469_3666988626",
    "_rev": "1-587c15cb556a4421d94949b46eb63030",
    "blockNumber": "4255521",
    "change": "-2.801",
    "changeN": -2.801,
    "contractAddress": "",
    "errorCode": "",
    "ethCurrentValue": "7079.14700082334",
    "ethHistoricalPrice": "303.79",
    "from": "0xf98c96b5d10faafc2324847c82305bd5fd7e5ad3",
    "integration": "etherscan",
    "method": "Transfer",
    "operation": "Withdraw",
    "status": "",
    "symbol": "ETH",
    "timestamp": 1504978649000,
    "to": "0x1c6db129a338e9a39a559a856175605dada4bdcd",
    "txHash": "0x5681f720f737811e4822936f08b4a8644184bde3ea3efea74614bb44cb78c901",
    "txnFee": "0.00042102",
    "txnFeeUsd": "1.06407085693918",
    "valueIn": "0",
    "valueOut": "2.801",
    "wallet": "Spot",
  },
  {
    "_id": "32174469_677045801_fee",
    "_rev": "1-9757ae6152095c9d89b3d09c3983b17b",
    "blockNumber": "4255492",
    "change": "-0.00042",
    "changeN": -0.00042,
    "contractAddress": "",
    "errorCode": "",
    "ethCurrentValue": "631.84103898816",
    "ethHistoricalPrice": "303.79",
    "from": "0xf98c96b5d10faafc2324847c82305bd5fd7e5ad3",
    "integration": "etherscan",
    "method": "Transfer",
    "operation": "Fee",
    "status": "",
    "symbol": "ETH",
    "timestamp": 1504977730000,
    "to": "0xa8baf26882084425b4c5ebcd7ddb959c914a74d0",
    "txHash": "0x76127867634dbb645d21ed2833156da65d2c183a726aca483cc09c7ccebebcb0",
    "txnFee": "0.00042",
    "txnFeeUsd": "1.06149294550011",
    "valueIn": "0",
    "valueOut": "0.25",
    "wallet": "Spot",
  },
  {
    "_id": "32174469_677045801",
    "_rev": "1-e4347c5e051350faea2babee1ba55b44",
    "blockNumber": "4255492",
    "change": "-0.25",
    "changeN": -0.25,
    "contractAddress": "",
    "errorCode": "",
    "ethCurrentValue": "631.84103898816",
    "ethHistoricalPrice": "303.79",
    "from": "0xf98c96b5d10faafc2324847c82305bd5fd7e5ad3",
    "integration": "etherscan",
    "method": "Transfer",
    "operation": "Withdraw",
    "status": "",
    "symbol": "ETH",
    "timestamp": 1504977730000,
    "to": "0xa8baf26882084425b4c5ebcd7ddb959c914a74d0",
    "txHash": "0x76127867634dbb645d21ed2833156da65d2c183a726aca483cc09c7ccebebcb0",
    "txnFee": "0.00042",
    "txnFeeUsd": "1.06149294550011",
    "valueIn": "0",
    "valueOut": "0.25",
    "wallet": "Spot",
  },
  {
    "_id": "32174469_1496232788_fee",
    "_rev": "1-7494b10c12a0781652dcb78bc86dd84b",
    "blockNumber": "4255366",
    "change": "-0.00042102",
    "changeN": -0.00042102,
    "contractAddress": "",
    "errorCode": "",
    "ethCurrentValue": "252.736415595264",
    "ethHistoricalPrice": "303.79",
    "from": "0xf98c96b5d10faafc2324847c82305bd5fd7e5ad3",
    "integration": "etherscan",
    "method": "Transfer",
    "operation": "Fee",
    "status": "",
    "symbol": "ETH",
    "timestamp": 1504974755000,
    "to": "0x1c6db129a338e9a39a559a856175605dada4bdcd",
    "txHash": "0xfbc404ce56a5b591c989551f39a8b7a5009b022873645d78acee1f8305bd4e34",
    "txnFee": "0.00042102",
    "txnFeeUsd": "1.06407085693918",
    "valueIn": "0",
    "valueOut": "0.1",
    "wallet": "Spot",
  },
  {
    "_id": "32174469_1496232788",
    "_rev": "1-e5ce1500c5d641929121f25406b551a5",
    "blockNumber": "4255366",
    "change": "-0.1",
    "changeN": -0.1,
    "contractAddress": "",
    "errorCode": "",
    "ethCurrentValue": "252.736415595264",
    "ethHistoricalPrice": "303.79",
    "from": "0xf98c96b5d10faafc2324847c82305bd5fd7e5ad3",
    "integration": "etherscan",
    "method": "Transfer",
    "operation": "Withdraw",
    "status": "",
    "symbol": "ETH",
    "timestamp": 1504974755000,
    "to": "0x1c6db129a338e9a39a559a856175605dada4bdcd",
    "txHash": "0xfbc404ce56a5b591c989551f39a8b7a5009b022873645d78acee1f8305bd4e34",
    "txnFee": "0.00042102",
    "txnFeeUsd": "1.06407085693918",
    "valueIn": "0",
    "valueOut": "0.1",
    "wallet": "Spot",
  },
  {
    "_id": "32174469_4131431469",
    "_rev": "1-ca1a2e2cf3c67de894d006c21cc9360c",
    "blockNumber": "4255208",
    "change": "5.061643",
    "changeN": 5.061643,
    "contractAddress": "",
    "errorCode": "",
    "ethCurrentValue": "12792.6150884286",
    "ethHistoricalPrice": "303.79",
    "from": "0x75e7f640bf6968b6f32c47a3cd82c3c2c9dcae68",
    "integration": "etherscan",
    "method": "Transfer",
    "operation": "Deposit",
    "status": "",
    "symbol": "ETH",
    "timestamp": 1504970517000,
    "to": "0xf98c96b5d10faafc2324847c82305bd5fd7e5ad3",
    "txHash": "0x0a11ffa605919dd2cc1524a0fc3de9b32a78678ccdae8aa91439c6353440503e",
    "txnFee": "0.0004851",
    "txnFeeUsd": "1.22602435205263",
    "valueIn": "5.061643",
    "valueOut": "0",
    "wallet": "Spot",
  },
  {
    "_id": "32174469_1605478640",
    "_rev": "1-09100ff32ea32b6014860afc583aa3af",
    "blockNumber": "4255150",
    "change": "0.09",
    "changeN": 0.09,
    "contractAddress": "",
    "errorCode": "",
    "ethCurrentValue": "227.462774035738",
    "ethHistoricalPrice": "303.79",
    "from": "0x75e7f640bf6968b6f32c47a3cd82c3c2c9dcae68",
    "integration": "etherscan",
    "method": "Transfer",
    "operation": "Deposit",
    "status": "",
    "symbol": "ETH",
    "timestamp": 1504969089000,
    "to": "0xf98c96b5d10faafc2324847c82305bd5fd7e5ad3",
    "txHash": "0xbed75f8508fff302e3d6bd6ecb006f33c27d4d17013d9d93f129cb14896df07c",
    "txnFee": "0.0011781",
    "txnFeeUsd": "2.97748771212781",
    "valueIn": "0.09",
    "valueOut": "0",
    "wallet": "Spot",
  },
]
`;

exports[`should add an erc20 file import 3`] = `
[
  {
    "_id": "3090763006_3337412441",
    "_rev": "1-ddf9bb57ba1b425323c6724d1dd43259",
    "blockNumber": "6365702",
    "change": "2.117826656607921801",
    "changeN": 2.117826656607922,
    "contractAddress": "0x58b6a8a3302369daec383334672404ee733ab239",
    "from": "0x8e306b005773bee6ba6a6e8972bc79d766cc15c8",
    "integration": "etherscan-erc20",
    "operation": "Deposit",
    "symbol": "LPT",
    "timestamp": 1537446056000,
    "to": "0xf98c96b5d10faafc2324847c82305bd5fd7e5ad3",
    "tokenName": "Livepeer Token",
    "tokenSymbol": "LPT",
    "tokenValue": "2.117826656607921801",
    "tokenValueHistorical": "N/A",
    "txHash": "0x70fb76fa1a862bf0d3946a3e19c980500a9d3545c04834f67137674202acd829",
    "wallet": "Spot",
  },
  {
    "_id": "3090763006_3390716220",
    "_rev": "1-52004dc2afe409219c51091bde171dad",
    "blockNumber": "5798082",
    "change": "911",
    "changeN": 911,
    "contractAddress": "0x7b2f9706cd8473b4f5b7758b0171a9933fc6c4d6",
    "from": "0x0000000000000000000000000000000000000000",
    "integration": "etherscan-erc20",
    "operation": "Deposit",
    "symbol": "HEALP",
    "timestamp": 1529149403000,
    "to": "0xf98c96b5d10faafc2324847c82305bd5fd7e5ad3",
    "tokenName": "An Etheal Promo",
    "tokenSymbol": "HEALP",
    "tokenValue": "911",
    "tokenValueHistorical": "N/A",
    "txHash": "0x93e256a0728412e50a5b8bd8672ee67b96305297a9498b566a032eccbf504fc9",
    "wallet": "Spot",
  },
  {
    "_id": "3090763006_821303067",
    "_rev": "1-f46efa93b4cc988e0a3a5051e2da5c71",
    "blockNumber": "5255185",
    "change": "10",
    "changeN": 10,
    "contractAddress": "0xa4e8c3ec456107ea67d3075bf9e3df3a75823db0",
    "from": "0xf652d990e50af27d8d423ac80631b4f5ef6d4113",
    "integration": "etherscan-erc20",
    "operation": "Deposit",
    "symbol": "LOOM",
    "timestamp": 1521059209000,
    "to": "0xf98c96b5d10faafc2324847c82305bd5fd7e5ad3",
    "tokenName": "Loom",
    "tokenSymbol": "LOOM",
    "tokenValue": "10",
    "tokenValueHistorical": "$0.79",
    "txHash": "0xca53366c006469162541313f3e714ca7b91f65ea8c5e69205f7aff27aa1dc1d3",
    "wallet": "Spot",
  },
  {
    "_id": "3090763006_3293730455",
    "_rev": "1-789cb90daf9eccddfbf01df5ff66dae9",
    "blockNumber": "5100803",
    "change": "2",
    "changeN": 2,
    "contractAddress": "0x1d462414fe14cf489c7a21cac78509f4bf8cd7c0",
    "from": "0x00f8d333dd93fb291d627bb80f09392b37241f91",
    "integration": "etherscan-erc20",
    "operation": "Deposit",
    "symbol": "CAN",
    "timestamp": 1518793800000,
    "to": "0xf98c96b5d10faafc2324847c82305bd5fd7e5ad3",
    "tokenName": "CanYaCoin",
    "tokenSymbol": "CAN",
    "tokenValue": "2",
    "tokenValueHistorical": "$1.32",
    "txHash": "0xf3c35a52ea24d286c1abf5b4f51a27aff17f70ebf62ef9ab616bd8cedd64e4dd",
    "wallet": "Spot",
  },
  {
    "_id": "3090763006_3542233293",
    "_rev": "1-7d54340135b92ea188366c835b09db6c",
    "blockNumber": "4632419",
    "change": "777",
    "changeN": 777,
    "contractAddress": "0x52903256dd18d85c2dc4a6c999907c9793ea61e3",
    "from": "0x0000000000000000000000000000000000000000",
    "integration": "etherscan-erc20",
    "operation": "Deposit",
    "symbol": "INSP",
    "timestamp": 1511803600000,
    "to": "0xf98c96b5d10faafc2324847c82305bd5fd7e5ad3",
    "tokenName": "INS Promo",
    "tokenSymbol": "INSP",
    "tokenValue": "777",
    "tokenValueHistorical": "N/A",
    "txHash": "0x08e216f2da99f2961380d164c1df7c792dfc1075d026ec778d2e4e1931c80cf9",
    "wallet": "Spot",
  },
  {
    "_id": "3090763006_85862324",
    "_rev": "1-222bbad145613a921666c18c17eb4d5d",
    "blockNumber": "4528943",
    "change": "29.9787992",
    "changeN": 29.9787992,
    "contractAddress": "0x519475b31653e46d20cd09f9fdcf3b12bdacb4f5",
    "from": "0xae2b80f7f4d285caa658a285233550d19c8e7847",
    "integration": "etherscan-erc20",
    "operation": "Deposit",
    "symbol": "VIU",
    "timestamp": 1510362866000,
    "to": "0xf98c96b5d10faafc2324847c82305bd5fd7e5ad3",
    "tokenName": "VIU",
    "tokenSymbol": "VIU",
    "tokenValue": "29.9787992",
    "tokenValueHistorical": "N/A",
    "txHash": "0x5d28d54b66e30c007be9768e6c1852c9df6ab2e903a01479bcfcd19798c85f72",
    "wallet": "Spot",
  },
  {
    "_id": "3090763006_418399487",
    "_rev": "1-3a7b49313564a6a58ffc469593b76712",
    "blockNumber": "4489555",
    "change": "0.21165476692904842",
    "changeN": 0.21165476692904842,
    "contractAddress": "0x0cf0ee63788a0849fe5297f3407f701e122cc023",
    "from": "0x5586aec6f58086524753d594cec08c4318314299",
    "integration": "etherscan-erc20",
    "operation": "Deposit",
    "symbol": "XDATA",
    "timestamp": 1509817219000,
    "to": "0xf98c96b5d10faafc2324847c82305bd5fd7e5ad3",
    "tokenName": "Streamr (old)",
    "tokenSymbol": "XDATA",
    "tokenValue": "0.21165476692904842",
    "tokenValueHistorical": "$0.02",
    "txHash": "0xeb18c18def1b7bf9e1f2e831647b9c8fe45de82e9669d7b52143a6c2cb15cc64",
    "wallet": "Spot",
  },
  {
    "_id": "3090763006_618946868",
    "_rev": "1-55ffd80e6f64fe6c472d9006b6ea80b2",
    "blockNumber": "4441567",
    "change": "319.22562200498686051",
    "changeN": 319.22562200498686,
    "contractAddress": "0xab95e915c123fded5bdfb6325e35ef5515f1ea69",
    "from": "0xb59fdff77a6175dfa4fe7af4281a52f61611eaa2",
    "integration": "etherscan-erc20",
    "operation": "Deposit",
    "symbol": "XNN",
    "timestamp": 1509150541000,
    "to": "0xf98c96b5d10faafc2324847c82305bd5fd7e5ad3",
    "tokenName": "XENON",
    "tokenSymbol": "XNN",
    "tokenValue": "319.22562200498686051",
    "tokenValueHistorical": "N/A",
    "txHash": "0x117756c2023161a70a4146feedf5b3a3f0b2028e8bc8542b4c59f994a29e5817",
    "wallet": "Spot",
  },
]
`;

exports[`should compute balances 5`] = `
[
  {
    "_id": "32174469_2471540929_fee",
    "_rev": "2-fa2d98137b12eb7843762a3ab7d2fa89",
    "balance": -3.117081245895825e-17,
    "blockNumber": "11187695",
    "change": "-0.0003213",
    "changeN": -0.0003213,
    "contractAddress": "",
    "errorCode": "",
    "ethCurrentValue": "1182.96827233165",
    "ethHistoricalPrice": "402.66",
    "from": "0xf98c96b5d10faafc2324847c82305bd5fd7e5ad3",
    "integration": "etherscan",
    "method": "Transfer",
    "operation": "Fee",
    "status": "",
    "symbol": "ETH",
    "timestamp": 1604460202000,
    "to": "0x003dc32fe920a4aaeed12dc87e145f030aa753f3",
    "txHash": "0xa6cb206757f26bc188607946af4a6d49f81ace2cf328eb2c36290b0083cc4770",
    "txnFee": "0.0003213",
    "txnFeeUsd": "0.812042103307583",
    "valueIn": "0",
    "valueOut": "0.468064038",
    "wallet": "Spot",
  },
  {
    "_id": "32174469_2471540929",
    "_rev": "2-a68a5166fba47e367e8385ef02e015b1",
    "balance": 0.00032129999999996883,
    "blockNumber": "11187695",
    "change": "-0.468064038",
    "changeN": -0.468064038,
    "contractAddress": "",
    "errorCode": "",
    "ethCurrentValue": "1182.96827233165",
    "ethHistoricalPrice": "402.66",
    "from": "0xf98c96b5d10faafc2324847c82305bd5fd7e5ad3",
    "integration": "etherscan",
    "method": "Transfer",
    "operation": "Withdraw",
    "status": "",
    "symbol": "ETH",
    "timestamp": 1604460202000,
    "to": "0x003dc32fe920a4aaeed12dc87e145f030aa753f3",
    "txHash": "0xa6cb206757f26bc188607946af4a6d49f81ace2cf328eb2c36290b0083cc4770",
    "txnFee": "0.0003213",
    "txnFeeUsd": "0.812042103307583",
    "valueIn": "0",
    "valueOut": "0.468064038",
    "wallet": "Spot",
  },
  {
    "_id": "3090763006_3337412441",
    "_rev": "2-7344e4147eafc58ca57314782106e9bc",
    "balance": 2.117826656607922,
    "blockNumber": "6365702",
    "change": "2.117826656607921801",
    "changeN": 2.117826656607922,
    "contractAddress": "0x58b6a8a3302369daec383334672404ee733ab239",
    "from": "0x8e306b005773bee6ba6a6e8972bc79d766cc15c8",
    "integration": "etherscan-erc20",
    "operation": "Deposit",
    "symbol": "LPT",
    "timestamp": 1537446056000,
    "to": "0xf98c96b5d10faafc2324847c82305bd5fd7e5ad3",
    "tokenName": "Livepeer Token",
    "tokenSymbol": "LPT",
    "tokenValue": "2.117826656607921801",
    "tokenValueHistorical": "N/A",
    "txHash": "0x70fb76fa1a862bf0d3946a3e19c980500a9d3545c04834f67137674202acd829",
    "wallet": "Spot",
  },
  {
    "_id": "3090763006_3390716220",
    "_rev": "2-a87d6db985a487b6c50c74a223abbf0a",
    "balance": 911,
    "blockNumber": "5798082",
    "change": "911",
    "changeN": 911,
    "contractAddress": "0x7b2f9706cd8473b4f5b7758b0171a9933fc6c4d6",
    "from": "0x0000000000000000000000000000000000000000",
    "integration": "etherscan-erc20",
    "operation": "Deposit",
    "symbol": "HEALP",
    "timestamp": 1529149403000,
    "to": "0xf98c96b5d10faafc2324847c82305bd5fd7e5ad3",
    "tokenName": "An Etheal Promo",
    "tokenSymbol": "HEALP",
    "tokenValue": "911",
    "tokenValueHistorical": "N/A",
    "txHash": "0x93e256a0728412e50a5b8bd8672ee67b96305297a9498b566a032eccbf504fc9",
    "wallet": "Spot",
  },
  {
    "_id": "32174469_4171546297_fee",
    "_rev": "2-9ac8eeea3d1c165144a0b173a2cec257",
    "balance": 0.468385338,
    "blockNumber": "5255185",
    "change": "-0.000134622",
    "changeN": -0.000134622,
    "contractAddress": "",
    "errorCode": "",
    "ethCurrentValue": "75.8209246785792",
    "ethHistoricalPrice": "613.15",
    "from": "0xf98c96b5d10faafc2324847c82305bd5fd7e5ad3",
    "integration": "etherscan",
    "method": "Transfer",
    "operation": "Fee",
    "status": "",
    "symbol": "ETH",
    "timestamp": 1521059209000,
    "to": "0xf652d990e50af27d8d423ac80631b4f5ef6d4113",
    "txHash": "0xca53366c006469162541313f3e714ca7b91f65ea8c5e69205f7aff27aa1dc1d3",
    "txnFee": "0.000134622",
    "txnFeeUsd": "0.340238817402656",
    "valueIn": "0",
    "valueOut": "0.03",
    "wallet": "Spot",
  },
  {
    "_id": "32174469_4171546297",
    "_rev": "2-90e4bde4c7ba7fd8c26146e0f09d6469",
    "balance": 0.46851995999999996,
    "blockNumber": "5255185",
    "change": "-0.03",
    "changeN": -0.03,
    "contractAddress": "",
    "errorCode": "",
    "ethCurrentValue": "75.8209246785792",
    "ethHistoricalPrice": "613.15",
    "from": "0xf98c96b5d10faafc2324847c82305bd5fd7e5ad3",
    "integration": "etherscan",
    "method": "Transfer",
    "operation": "Withdraw",
    "status": "",
    "symbol": "ETH",
    "timestamp": 1521059209000,
    "to": "0xf652d990e50af27d8d423ac80631b4f5ef6d4113",
    "txHash": "0xca53366c006469162541313f3e714ca7b91f65ea8c5e69205f7aff27aa1dc1d3",
    "txnFee": "0.000134622",
    "txnFeeUsd": "0.340238817402656",
    "valueIn": "0",
    "valueOut": "0.03",
    "wallet": "Spot",
  },
  {
    "_id": "3090763006_821303067",
    "_rev": "2-499ff9622cc97b1d5dcb1c651d00173d",
    "balance": 10,
    "blockNumber": "5255185",
    "change": "10",
    "changeN": 10,
    "contractAddress": "0xa4e8c3ec456107ea67d3075bf9e3df3a75823db0",
    "from": "0xf652d990e50af27d8d423ac80631b4f5ef6d4113",
    "integration": "etherscan-erc20",
    "operation": "Deposit",
    "symbol": "LOOM",
    "timestamp": 1521059209000,
    "to": "0xf98c96b5d10faafc2324847c82305bd5fd7e5ad3",
    "tokenName": "Loom",
    "tokenSymbol": "LOOM",
    "tokenValue": "10",
    "tokenValueHistorical": "$0.79",
    "txHash": "0xca53366c006469162541313f3e714ca7b91f65ea8c5e69205f7aff27aa1dc1d3",
    "wallet": "Spot",
  },
  {
    "_id": "3090763006_3293730455",
    "_rev": "2-dcc8b21af06babe458a7d416a192173c",
    "balance": 2,
    "blockNumber": "5100803",
    "change": "2",
    "changeN": 2,
    "contractAddress": "0x1d462414fe14cf489c7a21cac78509f4bf8cd7c0",
    "from": "0x00f8d333dd93fb291d627bb80f09392b37241f91",
    "integration": "etherscan-erc20",
    "operation": "Deposit",
    "symbol": "CAN",
    "timestamp": 1518793800000,
    "to": "0xf98c96b5d10faafc2324847c82305bd5fd7e5ad3",
    "tokenName": "CanYaCoin",
    "tokenSymbol": "CAN",
    "tokenValue": "2",
    "tokenValueHistorical": "$1.32",
    "txHash": "0xf3c35a52ea24d286c1abf5b4f51a27aff17f70ebf62ef9ab616bd8cedd64e4dd",
    "wallet": "Spot",
  },
  {
    "_id": "32174469_3745186990_fee",
    "_rev": "2-8e6e6a5b0c52e024230c7f0d44cfd8ee",
    "balance": 0.49851996,
    "blockNumber": "4675731",
    "change": "-0.00042",
    "changeN": -0.00042,
    "contractAddress": "",
    "errorCode": "",
    "ethCurrentValue": "2527.36415595264",
    "ethHistoricalPrice": "466.93",
    "from": "0xf98c96b5d10faafc2324847c82305bd5fd7e5ad3",
    "integration": "etherscan",
    "method": "Transfer",
    "operation": "Fee",
    "status": "",
    "symbol": "ETH",
    "timestamp": 1512422010000,
    "to": "0xae8d7e566ba7bdecd932015475c22cef3ae07768",
    "txHash": "0x56c244f19bcbe2b09b17ce4360c0f53f009202bc791b6d10726346336335b99b",
    "txnFee": "0.00042",
    "txnFeeUsd": "1.06149294550011",
    "valueIn": "0",
    "valueOut": "1",
    "wallet": "Spot",
  },
  {
    "_id": "32174469_3745186990",
    "_rev": "2-f7cc0dd831642258abf610614e486282",
    "balance": 0.49893995999999996,
    "blockNumber": "4675731",
    "change": "-1",
    "changeN": -1,
    "contractAddress": "",
    "errorCode": "",
    "ethCurrentValue": "2527.36415595264",
    "ethHistoricalPrice": "466.93",
    "from": "0xf98c96b5d10faafc2324847c82305bd5fd7e5ad3",
    "integration": "etherscan",
    "method": "Transfer",
    "operation": "Withdraw",
    "status": "",
    "symbol": "ETH",
    "timestamp": 1512422010000,
    "to": "0xae8d7e566ba7bdecd932015475c22cef3ae07768",
    "txHash": "0x56c244f19bcbe2b09b17ce4360c0f53f009202bc791b6d10726346336335b99b",
    "txnFee": "0.00042",
    "txnFeeUsd": "1.06149294550011",
    "valueIn": "0",
    "valueOut": "1",
    "wallet": "Spot",
  },
  {
    "_id": "3090763006_3542233293",
    "_rev": "2-42e3a1b8174e55c4a27a785cb0e041e6",
    "balance": 777,
    "blockNumber": "4632419",
    "change": "777",
    "changeN": 777,
    "contractAddress": "0x52903256dd18d85c2dc4a6c999907c9793ea61e3",
    "from": "0x0000000000000000000000000000000000000000",
    "integration": "etherscan-erc20",
    "operation": "Deposit",
    "symbol": "INSP",
    "timestamp": 1511803600000,
    "to": "0xf98c96b5d10faafc2324847c82305bd5fd7e5ad3",
    "tokenName": "INS Promo",
    "tokenSymbol": "INSP",
    "tokenValue": "777",
    "tokenValueHistorical": "N/A",
    "txHash": "0x08e216f2da99f2961380d164c1df7c792dfc1075d026ec778d2e4e1931c80cf9",
    "wallet": "Spot",
  },
  {
    "_id": "3090763006_85862324",
    "_rev": "2-902c8c7e1efe46edff150733caf6e79d",
    "balance": 29.9787992,
    "blockNumber": "4528943",
    "change": "29.9787992",
    "changeN": 29.9787992,
    "contractAddress": "0x519475b31653e46d20cd09f9fdcf3b12bdacb4f5",
    "from": "0xae2b80f7f4d285caa658a285233550d19c8e7847",
    "integration": "etherscan-erc20",
    "operation": "Deposit",
    "symbol": "VIU",
    "timestamp": 1510362866000,
    "to": "0xf98c96b5d10faafc2324847c82305bd5fd7e5ad3",
    "tokenName": "VIU",
    "tokenSymbol": "VIU",
    "tokenValue": "29.9787992",
    "tokenValueHistorical": "N/A",
    "txHash": "0x5d28d54b66e30c007be9768e6c1852c9df6ab2e903a01479bcfcd19798c85f72",
    "wallet": "Spot",
  },
  {
    "_id": "3090763006_418399487",
    "_rev": "2-f43f9b8cb9056290cdeaf214304dc911",
    "balance": 0.21165476692904842,
    "blockNumber": "4489555",
    "change": "0.21165476692904842",
    "changeN": 0.21165476692904842,
    "contractAddress": "0x0cf0ee63788a0849fe5297f3407f701e122cc023",
    "from": "0x5586aec6f58086524753d594cec08c4318314299",
    "integration": "etherscan-erc20",
    "operation": "Deposit",
    "symbol": "XDATA",
    "timestamp": 1509817219000,
    "to": "0xf98c96b5d10faafc2324847c82305bd5fd7e5ad3",
    "tokenName": "Streamr (old)",
    "tokenSymbol": "XDATA",
    "tokenValue": "0.21165476692904842",
    "tokenValueHistorical": "$0.02",
    "txHash": "0xeb18c18def1b7bf9e1f2e831647b9c8fe45de82e9669d7b52143a6c2cb15cc64",
    "wallet": "Spot",
  },
  {
    "_id": "3090763006_618946868",
    "_rev": "2-ac08eb11feca67745e708d9e7fc2b6b0",
    "balance": 319.22562200498686,
    "blockNumber": "4441567",
    "change": "319.22562200498686051",
    "changeN": 319.22562200498686,
    "contractAddress": "0xab95e915c123fded5bdfb6325e35ef5515f1ea69",
    "from": "0xb59fdff77a6175dfa4fe7af4281a52f61611eaa2",
    "integration": "etherscan-erc20",
    "operation": "Deposit",
    "symbol": "XNN",
    "timestamp": 1509150541000,
    "to": "0xf98c96b5d10faafc2324847c82305bd5fd7e5ad3",
    "tokenName": "XENON",
    "tokenSymbol": "XNN",
    "tokenValue": "319.22562200498686051",
    "tokenValueHistorical": "N/A",
    "txHash": "0x117756c2023161a70a4146feedf5b3a3f0b2028e8bc8542b4c59f994a29e5817",
    "wallet": "Spot",
  },
  {
    "_id": "32174469_1010805629_fee",
    "_rev": "2-84419a15126b031ad19ba63db773f614",
    "balance": 1.49893996,
    "blockNumber": "4344914",
    "change": "-0.000441",
    "changeN": -0.000441,
    "contractAddress": "",
    "errorCode": "",
    "ethCurrentValue": "1263.68207797632",
    "ethHistoricalPrice": "311.26",
    "from": "0xf98c96b5d10faafc2324847c82305bd5fd7e5ad3",
    "integration": "etherscan",
    "method": "Transfer",
    "operation": "Fee",
    "status": "",
    "symbol": "ETH",
    "timestamp": 1507394778000,
    "to": "0x003dc32fe920a4aaeed12dc87e145f030aa753f3",
    "txHash": "0xb41d6819932845278e7c451400f1778a952b35c6358dc51b49436438753f5113",
    "txnFee": "0.000441",
    "txnFeeUsd": "1.11456759277511",
    "valueIn": "0",
    "valueOut": "0.5",
    "wallet": "Spot",
  },
  {
    "_id": "32174469_1010805629",
    "_rev": "2-651db12b991d06f6ca0c32c2e5e3fdab",
    "balance": 1.4993809599999999,
    "blockNumber": "4344914",
    "change": "-0.5",
    "changeN": -0.5,
    "contractAddress": "",
    "errorCode": "",
    "ethCurrentValue": "1263.68207797632",
    "ethHistoricalPrice": "311.26",
    "from": "0xf98c96b5d10faafc2324847c82305bd5fd7e5ad3",
    "integration": "etherscan",
    "method": "Transfer",
    "operation": "Withdraw",
    "status": "",
    "symbol": "ETH",
    "timestamp": 1507394778000,
    "to": "0x003dc32fe920a4aaeed12dc87e145f030aa753f3",
    "txHash": "0xb41d6819932845278e7c451400f1778a952b35c6358dc51b49436438753f5113",
    "txnFee": "0.000441",
    "txnFeeUsd": "1.11456759277511",
    "valueIn": "0",
    "valueOut": "0.5",
    "wallet": "Spot",
  },
  {
    "_id": "32174469_3666988626_fee",
    "_rev": "2-575502eceeb9a047da8107d9f0934430",
    "balance": 1.9993809599999999,
    "blockNumber": "4255521",
    "change": "-0.00042102",
    "changeN": -0.00042102,
    "contractAddress": "",
    "errorCode": "",
    "ethCurrentValue": "7079.14700082334",
    "ethHistoricalPrice": "303.79",
    "from": "0xf98c96b5d10faafc2324847c82305bd5fd7e5ad3",
    "integration": "etherscan",
    "method": "Transfer",
    "operation": "Fee",
    "status": "",
    "symbol": "ETH",
    "timestamp": 1504978649000,
    "to": "0x1c6db129a338e9a39a559a856175605dada4bdcd",
    "txHash": "0x5681f720f737811e4822936f08b4a8644184bde3ea3efea74614bb44cb78c901",
    "txnFee": "0.00042102",
    "txnFeeUsd": "1.06407085693918",
    "valueIn": "0",
    "valueOut": "2.801",
    "wallet": "Spot",
  },
  {
    "_id": "32174469_3666988626",
    "_rev": "2-f3fc9cf1488feab6e44c79400976a26f",
    "balance": 1.99980198,
    "blockNumber": "4255521",
    "change": "-2.801",
    "changeN": -2.801,
    "contractAddress": "",
    "errorCode": "",
    "ethCurrentValue": "7079.14700082334",
    "ethHistoricalPrice": "303.79",
    "from": "0xf98c96b5d10faafc2324847c82305bd5fd7e5ad3",
    "integration": "etherscan",
    "method": "Transfer",
    "operation": "Withdraw",
    "status": "",
    "symbol": "ETH",
    "timestamp": 1504978649000,
    "to": "0x1c6db129a338e9a39a559a856175605dada4bdcd",
    "txHash": "0x5681f720f737811e4822936f08b4a8644184bde3ea3efea74614bb44cb78c901",
    "txnFee": "0.00042102",
    "txnFeeUsd": "1.06407085693918",
    "valueIn": "0",
    "valueOut": "2.801",
    "wallet": "Spot",
  },
  {
    "_id": "32174469_677045801_fee",
    "_rev": "2-0fc2879a401afe5a842e4535cef3fa44",
    "balance": 4.80080198,
    "blockNumber": "4255492",
    "change": "-0.00042",
    "changeN": -0.00042,
    "contractAddress": "",
    "errorCode": "",
    "ethCurrentValue": "631.84103898816",
    "ethHistoricalPrice": "303.79",
    "from": "0xf98c96b5d10faafc2324847c82305bd5fd7e5ad3",
    "integration": "etherscan",
    "method": "Transfer",
    "operation": "Fee",
    "status": "",
    "symbol": "ETH",
    "timestamp": 1504977730000,
    "to": "0xa8baf26882084425b4c5ebcd7ddb959c914a74d0",
    "txHash": "0x76127867634dbb645d21ed2833156da65d2c183a726aca483cc09c7ccebebcb0",
    "txnFee": "0.00042",
    "txnFeeUsd": "1.06149294550011",
    "valueIn": "0",
    "valueOut": "0.25",
    "wallet": "Spot",
  },
  {
    "_id": "32174469_677045801",
    "_rev": "2-7df740b996b6375eeadb1e63c47ce95f",
    "balance": 4.80122198,
    "blockNumber": "4255492",
    "change": "-0.25",
    "changeN": -0.25,
    "contractAddress": "",
    "errorCode": "",
    "ethCurrentValue": "631.84103898816",
    "ethHistoricalPrice": "303.79",
    "from": "0xf98c96b5d10faafc2324847c82305bd5fd7e5ad3",
    "integration": "etherscan",
    "method": "Transfer",
    "operation": "Withdraw",
    "status": "",
    "symbol": "ETH",
    "timestamp": 1504977730000,
    "to": "0xa8baf26882084425b4c5ebcd7ddb959c914a74d0",
    "txHash": "0x76127867634dbb645d21ed2833156da65d2c183a726aca483cc09c7ccebebcb0",
    "txnFee": "0.00042",
    "txnFeeUsd": "1.06149294550011",
    "valueIn": "0",
    "valueOut": "0.25",
    "wallet": "Spot",
  },
  {
    "_id": "32174469_1496232788_fee",
    "_rev": "2-03736d84604d450989609955b4e13b78",
    "balance": 5.05122198,
    "blockNumber": "4255366",
    "change": "-0.00042102",
    "changeN": -0.00042102,
    "contractAddress": "",
    "errorCode": "",
    "ethCurrentValue": "252.736415595264",
    "ethHistoricalPrice": "303.79",
    "from": "0xf98c96b5d10faafc2324847c82305bd5fd7e5ad3",
    "integration": "etherscan",
    "method": "Transfer",
    "operation": "Fee",
    "status": "",
    "symbol": "ETH",
    "timestamp": 1504974755000,
    "to": "0x1c6db129a338e9a39a559a856175605dada4bdcd",
    "txHash": "0xfbc404ce56a5b591c989551f39a8b7a5009b022873645d78acee1f8305bd4e34",
    "txnFee": "0.00042102",
    "txnFeeUsd": "1.06407085693918",
    "valueIn": "0",
    "valueOut": "0.1",
    "wallet": "Spot",
  },
  {
    "_id": "32174469_1496232788",
    "_rev": "2-2eeabcd0b5e6ed7f5cbd60a76734b2fc",
    "balance": 5.051643,
    "blockNumber": "4255366",
    "change": "-0.1",
    "changeN": -0.1,
    "contractAddress": "",
    "errorCode": "",
    "ethCurrentValue": "252.736415595264",
    "ethHistoricalPrice": "303.79",
    "from": "0xf98c96b5d10faafc2324847c82305bd5fd7e5ad3",
    "integration": "etherscan",
    "method": "Transfer",
    "operation": "Withdraw",
    "status": "",
    "symbol": "ETH",
    "timestamp": 1504974755000,
    "to": "0x1c6db129a338e9a39a559a856175605dada4bdcd",
    "txHash": "0xfbc404ce56a5b591c989551f39a8b7a5009b022873645d78acee1f8305bd4e34",
    "txnFee": "0.00042102",
    "txnFeeUsd": "1.06407085693918",
    "valueIn": "0",
    "valueOut": "0.1",
    "wallet": "Spot",
  },
  {
    "_id": "32174469_4131431469",
    "_rev": "2-a6ac268514650fd927a53a4a611f5cc7",
    "balance": 5.151643,
    "blockNumber": "4255208",
    "change": "5.061643",
    "changeN": 5.061643,
    "contractAddress": "",
    "errorCode": "",
    "ethCurrentValue": "12792.6150884286",
    "ethHistoricalPrice": "303.79",
    "from": "0x75e7f640bf6968b6f32c47a3cd82c3c2c9dcae68",
    "integration": "etherscan",
    "method": "Transfer",
    "operation": "Deposit",
    "status": "",
    "symbol": "ETH",
    "timestamp": 1504970517000,
    "to": "0xf98c96b5d10faafc2324847c82305bd5fd7e5ad3",
    "txHash": "0x0a11ffa605919dd2cc1524a0fc3de9b32a78678ccdae8aa91439c6353440503e",
    "txnFee": "0.0004851",
    "txnFeeUsd": "1.22602435205263",
    "valueIn": "5.061643",
    "valueOut": "0",
    "wallet": "Spot",
  },
  {
    "_id": "32174469_1605478640",
    "_rev": "2-26f080e254d209267a292126efc0d606",
    "balance": 0.09,
    "blockNumber": "4255150",
    "change": "0.09",
    "changeN": 0.09,
    "contractAddress": "",
    "errorCode": "",
    "ethCurrentValue": "227.462774035738",
    "ethHistoricalPrice": "303.79",
    "from": "0x75e7f640bf6968b6f32c47a3cd82c3c2c9dcae68",
    "integration": "etherscan",
    "method": "Transfer",
    "operation": "Deposit",
    "status": "",
    "symbol": "ETH",
    "timestamp": 1504969089000,
    "to": "0xf98c96b5d10faafc2324847c82305bd5fd7e5ad3",
    "txHash": "0xbed75f8508fff302e3d6bd6ecb006f33c27d4d17013d9d93f129cb14896df07c",
    "txnFee": "0.0011781",
    "txnFeeUsd": "2.97748771212781",
    "valueIn": "0.09",
    "valueOut": "0",
    "wallet": "Spot",
  },
]
`;
